This might fix the scrollbar issue in Safari 6/7

--- a/app/views/css/fold.css
+++ b/app/views/css/fold.css
@@ -215,6 +215,7 @@ a:hover {
     float: left;
     margin-left: 12px;
     height: 28px;
+    width: 50%;
 }
 
 .menu a.logo:hover {
